Bug 183008 - fuzzy image search requires two clicks to navigate back
Summary: fuzzy image search requires two clicks to navigate back
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Searches-Similarity (other bugs)
Version First Reported In: 0.10.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-03 15:33 UTC by Michael Ploujnikov
Modified: 2019-12-27 13:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 7.0.0
Sentry Crash Report:


Attachments
screenshot 1 (199.93 KB, image/png)
2009-02-03 15:33 UTC, Michael Ploujnikov
Details
screenshot 2 (358.77 KB, image/png)
2009-02-03 15:33 UTC, Michael Ploujnikov
Details
screenshot 3 (369.36 KB, image/png)
2009-02-03 15:34 UTC, Michael Ploujnikov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Ploujnikov 2009-02-03 15:33:17 UTC
Version:           0.10.0-rc2 (rev.: 920614) (using KDE 4.1.4)
Compiler:          gcc (GCC) 4.3.0 20080428 (Red Hat 4.3.0-8) x86_64 platform
OS:                Linux
Installed from:    Fedora RPMs

This is a reproducible problem and here is the sequence of events to observe the problem:
- start digikam
- observe "My Albums" selected and the welcome screen in the middle panel
- expand "dkPictures" album
- expand "g2data-from-plouj.com-again" sub-album
- expand "personal" sub-album
- select sub-album "insects"
- click on the down arrow ("\/") on the "Back" button
- observe the following locations  (screenshot 1):
 - My Albums
 - _Current_Fuzzy_Sketch_Search_
- right-click on dsc00954.jpg
- select "Find Similar"
- click on the down arrow ("\/") on the "Back" button
- observe the following locations  (screenshot 2):
 - _Current_Fuzzy_Image_Search_
 - insects
 - My Albums
 - _Current_Fuzzy_Sketch_Search_

 - click the "Back" button
 - expect to be back at view in screenshot 1, but observe no noticeable change in the digikam window
- click on the down arrow ("\/") on the "Back" button
- observe the following locations  (screenshot 3):
 - insects
 - My Albums
 - _Current_Fuzzy_Sketch_Search_
 - click the "Back" button
- observe being finally back at the screen which shows the contents of the "insects" album (as in screenshot 1)

component information:
digiKam version 0.10.0-rc2 (rev.: 920614)
Exiv2 can write to Jp2: No
Exiv2 can write to Jpeg: Yes
Exiv2 can write to Png: No
Exiv2 can write to Tiff: No
Exiv2 support XMP metadata: Yes
LibCImg: 129
LibExiv2: 0.16
LibJPEG: 62
LibJasper: 1.900.1
LibKDE: 4.1.4 (KDE 4.1.4)
LibKExiv2: 0.6.0
LibKdcraw: 0.5.0
LibLCMS: 117
LibPNG: 1.2.29
LibQt: 4.4.3
LibRaw: 0.7.0-Alpha5
LibTIFF: LIBTIFF, Version 3.8.2 Copyright (c) 1988-1996 Sam Leffler Copyright (c) 1991-1996 Silicon Graphics, Inc.
LibGphoto2: 2.4.0
LibKipi: 0.4.0
Comment 1 Michael Ploujnikov 2009-02-03 15:33:40 UTC
Created attachment 30914 [details]
screenshot 1
Comment 2 Michael Ploujnikov 2009-02-03 15:33:57 UTC
Created attachment 30915 [details]
screenshot 2
Comment 3 Michael Ploujnikov 2009-02-03 15:34:16 UTC
Created attachment 30916 [details]
screenshot 3
Comment 4 Marcel Wiesweg 2009-02-07 23:32:42 UTC
SVN commit 922947 by mwiesweg:

Only handle album selection if tab is active (same procedure for all other left sidebar tabs)
This is for example necessary so that the selected album in the folder view is not inserted
to the album history.

CCBUG: 183008

 M  +7 -0      fuzzysearchview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=922947
Comment 5 Marcel Wiesweg 2009-02-07 23:32:47 UTC
SVN commit 922948 by mwiesweg:

Make special titles user-presentable in album history

CCBUG: 183008

 M  +21 -0     digikamview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=922948
Comment 6 Marcel Wiesweg 2009-02-07 23:32:51 UTC
SVN commit 922949 by mwiesweg:

If the last backward history item has the same album, but different widget, just
set the widget, but do not create a duplicate entry.
This applied when Find Similar from context menu is selected.

BUG: 183008

 M  +4 -5      albumhistory.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=922949
Comment 7 caulier.gilles 2019-12-27 13:18:51 UTC
Not reproducible with 7.0.0-beta1