If the last backward history item has the same album, but different widget, just set the widget, but do not create a duplicate entry. This applied when Find Similar from context menu is selected.

BUG: 183008

svn path=/trunk/extragear/graphics/digikam/; revision=922949